terraform/modules/vpc/main.tf
data "aws_availability_zones" "available" {
    state = "available"
}

locals {
    azs = slice(data.aws_availability_zones.available.names , 0 , 2)
}

resource "aws_vpc" "main_vpc" {
    cidr_block = var.vpc_cidr 
    enable_dns_support = true
    enable_dns_hostnames = true 
    instance_tenancy = "default"

    tags = {
        Name = "${var.env}-vpc"
    }
}

resource "aws_subnet" "public_subnet" {
   vpc_id = aws_vpc.main_vpc.id 
   cidr_block = cidrsubnet(var.vpc_cidr , 8 , 0)
   availability_zone = element(local.azs, 0) 
   map_public_ip_on_launch = true

   tags = {
     Name = "${var.env}-public-subnet"
   } 
}

resource "aws_subnet" "private_subnet" {
   vpc_id = aws_vpc.main_vpc.id 
   cidr_block = cidrsubnet(var.vpc_cidr , 8 , 1)
   availability_zone = element(local.azs, 1) 

   tags = {
     Name = "${var.env}-private-subnet"
   } 
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main_vpc.id 
    tags = {
      Name = "${var.env}-igw"
    }
}

resource "aws_eip" "nat" {
    domain = "vpc"

    tags = {
     Name = "${var.env}-eip"
    }
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public_subnet.id
    tags = {
        Name = "${var.env}-nat"
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main_vpc.id 
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id 
    }

    tags = {
      Name = "${var.env}-public-rt"
   } 
}

resource "aws_route_table_association" "public_rta" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id 
}

resource "aws_route_table" "private_rt" {
    vpc_id = aws_vpc.main_vpc.id 
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id 
    }

    tags = {
      Name = "${var.env}-private-rt"
   } 
}

resource "aws_route_table_association" "private_rta" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id 
}
